# GUIN

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  pyproject.toml
docs/: architecture.md  tutorial_windows.md
examples/: run_demo.sh
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx
frontend/src/api/: client.js
frontend/src/components/: Layout.jsx
frontend/src/hooks/: useTheme.js
frontend/src/pages/: DashboardPage.jsx  ProvenancePage.jsx  RunPage.jsx  SettingsPage.jsx  ToolsPage.jsx  ValidatePage.jsx
personal-website/: README.md  index.html  styles.css
src/guin/: __init__.py
src/guin/agent/: __init__.py  nipype_adapter.py  workflow_gen.py
src/guin/agents/: __init__.py
src/guin/api/: __init__.py  routes.py  websocket.py
src/guin/cli/: main.py
src/guin/core/: config.py
src/guin/mcp/: __init__.py
src/guin/mcp_server/: __init__.py  server.py
src/guin/mcp_server/tools/: __init__.py  factory.py  fmriprep.py  (+1 more)
src/guin/models/: __init__.py  derivatives.py
src/guin/nipype_interfaces/: __init__.py
src/guin/planner/: __init__.py  llm.py
src/guin/provenance/: __init__.py  diff.py  tracker.py
src/guin/rag/: __init__.py  indexer.py  tool_selector.py
src/guin/templates/: __init__.py
src/guin/tools/: __init__.py
src/guin/vectorstore/: __init__.py
tests/guin/agent/: test_nipype_adapter.py  test_workflow_gen.py
tests/guin/api/: test_routes.py
tests/guin/planner/: test_llm.py
tests/guin/provenance/: test_diff.py  test_tracker.py
tests/guin/rag/: test_tool_selector.py
(+3 files in other folders)
